--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <main class="main">
       <!--==================== HOME ====================-->
       <section class="home">
+        <h1>HOME - ABOUT US - COMMUNITY - NEWS - CONTACT</h1>
         <img src="./preview.png" alt="" />
       </section>
     </main>
